<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/colorPrimary"
        tools:targetApi="o"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_data"
        android:title="@string/data"
        android:icon="@drawable/ic_data"
        android:iconTint="@color/colorPrimary"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <item
        android:id="@+id/menu_category"
        android:title="@string/category"
        android:icon="@drawable/ic_baseline_category_24"
        android:iconTint="@color/colorPrimary"
        app:showAsAction="ifRoom"
        tools:ignore="UnusedAttribute" />
</menu>